# QLD_fuel_scraping

./: .gitignore  LICENSE  Makefile  README.md  daily_scrape.py  fuel_types.py  main.py  monthly_scrape.py  pyproject.toml
.github/workflows/: scrape.yml  test_env_secrets.yml
data/: 21_08.csv  fuel_types.json  monthly_list.csv
data/month/: 2023-02-lastmonthsfpqprices_changesonly.csv
data/week/: 21_31.csv  21_32.csv  21_33.csv  21_34.csv  21_35.csv  21_36.csv  21_37.csv  21_38.csv  21_39.csv  21_40.csv  21_41.csv  21_42.csv  21_43.csv  21_44.csv  21_45.csv  21_46.csv  21_47.csv  21_48.csv  21_49.csv  21_50.csv  21_51.csv  21_52.csv  22_01.csv  22_02.csv  22_03.csv  22_04.csv  22_05.csv  22_06.csv  22_07.csv  22_08.csv  22_09.csv  22_10.csv  22_11.csv  22_12.csv  22_13.csv  22_14.csv  22_15.csv  22_16.csv  22_17.csv  22_18.csv  (+172 more)
