[tool.poetry]
name = "qld_fuel_scraping"
version = "0.1.0"
description = ""
authors = ["gsajko <grzegorz.sajko@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.1"
bs4 = "^0.0.1"
black = "^23.1.0"

[tool.poetry.dev-dependencies]

ruff = "^0.0.228"

mypy = "^0.782"

pytest = "^6.0.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.9"


jupyter = "^1.0.0"
jupyter_contrib_nbextensions = "^0.5.1"
ipykernel = "^5.3.4"
jupyter_nbextensions_configurator = "^0.4.1"
tabulate = "^0.8.7"
seaborn = "^0.11.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-outs
    | build
    | dist
  )/
'''

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]